Functionality improvements.